[package]
name = "hello_cargo"
version = "0.1.0"
authors = ["aaa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
# number_traits = { version = "0.2.2", default-features=false }
rand = "0.6"

[dependencies.winapi]
version = "0.3"
features = ["winuser"]